# teamspeak-plugin-ducker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ducker.qrc  package.py
res/: package.ini
src/: config_ducking_client.cpp  config_ducking_client.h  config_ducking_tabs.cpp  config_ducking_tabs.h  mod_ducker_channel.cpp  mod_ducker_channel.h  mod_ducker_global.cpp  mod_ducker_global.h  plugin.cpp  plugin.h  plugin_qt.cpp  plugin_qt.h  settings_duck.cpp  settings_duck.h  translator.cpp
